# sps3c

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: embed_pem_as_c.cmake
src/: main.c
